Wrapped up with CSS file. Game is still buggy but it does works

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: url(neon-future-game-pad-background-vector-35068740.jpeg) no-repeat center center fixed;
+  background-size: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  position: absolute;
+  top: 45vh;
+  left: 1vw;
+  font-size: 3rem;
+  font-weight: bolder;
+  background: linear-gradient(to bottom right, rgb(13,211, 242)), rgb(255, 180, 192);
+  /* -webkit-background-clip: text; */
+  color: transparent;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h2 {
+  position: absolute;
+  top: 45vh;
+  left: 1vw;
+  font-size: 3rem;
+  font-weight: bolder;
+  background: linear-gradient(to bottom right, rgb(13,211, 242)), rgb(255, 180, 192);
+  /* -webkit-background-clip: text; */
+  color: transparent;
 }
 
-.App-link {
-  color: #61dafb;
+#game {
+  width: 400px;
+  height: 500px;
+  border: 3px solid black;
+  border-radius: 10px;
+  border-color: rgb(0,0,0);
+  position: absolute;
+  top: 20vh;
+  left: 35vw;
+  overflow:hidden;
+  background-color: rgba(254, 254, 254, 0.07);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#character {
+  width: 20px;
+  height: 20px;
+  background-color: rgb(229, 121, 193);
+  border: 2px solid black;
+  border-radius: relative;
+  top: 400px;
+  left: 190px;
+  z-index: 1000000;
+}
+
+.block {
+  width: 400px;
+  height: 20px;
+  background-color: black;
+  position: relative;
+  top: 100px;
+  margin-top: -20px;
+  background: linear-gradient(to bottom right, rgb(13, 211, 242)),rgb(255,180, 192);
+  color: transparent;
+}
+
+.hole {
+  widdth: 40px;
+  height: 20px;
+  background-color: rgba(0,0,0,0,0.8);
+  position: relative;
+  top: 100px;
+  margin-top: -20px;
 }
